--- a/integrador.html
+++ b/integrador.html
@@ -17,7 +17,7 @@
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Loja de acessórios</title>
+    <title>Loja pecuaria</title>
 </head>
 <body>
     <header>
@@ -63,8 +63,8 @@
                 <!-- Logo -->
                 <section class="logo">
                     <a href="">
-                        <h1 class="font">Tuti</h1>
-                        <p class="font">Sacolas Estampadas</p>
+                        <h1 class="font">nome empresa integrador</h1>
+                        <p class="font">agro é top!</p>
                     </a>
                 </section>
                 <!-- Menu -->
@@ -85,7 +85,7 @@
                             <i class="fa fa-user-circle" aria-hidden="true"></i>
                         </span>
                         <a href="">                            
-                            <span class="font">Login</span>
+                            <span class="font">adicionar informacoes</span>
                         </a>
                     </section>
                     <!-- Social Media -->
@@ -102,16 +102,8 @@
                                 <i class="fa fa-instagram" aria-hidden="true"></i>
                             </span>
                         </a>
-                        <!-- Pinterest -->
-                        <a href="">
-                            <span class="iconSocial">
-                                <i class="fa fa-pinterest-p" aria-hidden="true"></i>
                             </span>
                         </a>
-                        <!-- Bag -->
-                        <a href="">
-                            <span class="iconSocial">
-                                <i class="fa fa-shopping-bag" aria-hidden="true"></i>
                             </span>
                         </a>
                     </section>
@@ -129,7 +121,7 @@
                     <span>Mais vendido</span>
                 </div>
                 <div class="productCardImage">
-                    <img src="./assets/image/bag-orange.webp" alt="Product One" />
+                    <img src="assets/image/sal gado.jpg" alt="Product One" />
                 </div>
                 <div class="productInfo">
                     <h2>Sou um produto</h2>
@@ -143,7 +135,7 @@
                     <span></span>
                 </div>
                 <div class="productCardImage">
-                    <img src="./assets/image/bag-orange.webp" alt="Product One" />
+                    <img src="assets/image/sal gado.jpg" alt="Product One" />
                 </div>
                 <div class="productInfo">
                     <h2>Sou um produto</h2>
@@ -157,7 +149,7 @@
                     <span></span>
                 </div>
                 <div class="productCardImage">
-                    <img src="./assets/image/bag-orange.webp" alt="Product One" />
+                    <img src="assets/image/VERDEBOI.JPG" alt="Product One" />
                 </div>
                 <div class="productInfo">
                     <h2>Sou um produto</h2>
@@ -171,7 +163,7 @@
                     <span>Mais vendido</span>
                 </div>
                 <div class="productCardImage">
-                    <img src="./assets/image/bag-orange.webp" alt="Product One" />
+                    <img src="assets/image/salgado vegano.JPG" alt="Product One" />
                 </div>
                 <div class="productInfo">
                     <h2>Sou um produto</h2>
@@ -186,7 +178,7 @@
                     <span></span>
                 </div>
                 <div class="productCardImage">
-                    <img src="./assets/image/bag-orange.webp" alt="Product One" />
+                    <img src="assets/image/sal gado.jpg" alt="Product One" />
                 </div>
                 <div class="productInfo">
                     <h2>Sou um produto</h2>
@@ -200,7 +192,7 @@
                     <span>Promoção</span>
                 </div>
                 <div class="productCardImage">
-                    <img src="./assets/image/bag-orange.webp" alt="Product One" />
+                    <img src="assets/image/AZULBOI.JPG" alt="Product One" />
                 </div>
                 <div class="productInfo">
                     <h2>Sou um produto</h2>
@@ -217,7 +209,7 @@
                     <span></span>
                 </div>
                 <div class="productCardImage">
-                    <img src="./assets/image/bag-orange.webp" alt="Product One" />
+                    <img src="assets/image/AZULBOI.JPG" alt="Product One" />
                 </div>
                 <div class="productInfo">
                     <h2>Sou um produto</h2>
@@ -231,7 +223,7 @@
                     <span></span>
                 </div>
                 <div class="productCardImage">
-                    <img src="./assets/image/bag-orange.webp" alt="Product One" />
+                    <img src="assets/image/VERDEBOI.JPG" alt="Product One" />
                 </div>
                 <div class="productInfo">
                     <h2>Sou um produto</h2>
@@ -246,7 +238,7 @@
                     <span></span>
                 </div>
                 <div class="productCardImage">
-                    <img src="./assets/image/bag-orange.webp" alt="Product One" />
+                    <img src="assets/image/salgado vegano.JPG" alt="Product One" />
                 </div>
                 <div class="productInfo">
                     <h2>Sou um produto</h2>
@@ -260,7 +252,7 @@
                     <span>Mais vendido</span>
                 </div>
                 <div class="productCardImage">
-                    <img src="./assets/image/bag-orange.webp" alt="Product One" />
+                    <img src="assets/image/sal gado.jpg" alt="Product One" />
                 </div>
                 <div class="productInfo">
                     <h2>Sou um produto</h2>
@@ -274,7 +266,7 @@
                     <span>Mais vendido</span>
                 </div>
                 <div class="productCardImage">
-                    <img src="./assets/image/bag-orange.webp" alt="Product One" />
+                    <img src="assets/image/ra_o_para_bovinos_de_corte_qualicorte_18_farelada_adm_-_40kg.jpg" alt="Product One" />
                 </div>
                 <div class="productInfo">
                     <h2>Sou um produto</h2>
@@ -288,7 +280,7 @@
                     <span></span>
                 </div>
                 <div class="productCardImage">
-                    <img src="./assets/image/bag-orange.webp" alt="Product One" />
+                    <img src="assets/image/VERDEBOI.JPG" alt="Product One" />
                 </div>
                 <div class="productInfo">
                     <h2>Sou um produto</h2>
