--- a/integrador.html
+++ b/integrador.html
@@ -20,6 +20,16 @@
     <title>Loja pecuaria</title>
 </head>
 <body>
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+        </div>
+      </div>
+      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+      <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+      </script>
     <header>
         <div id="container">
             <div class="headerRow">
@@ -28,9 +38,11 @@
                     <span class="icon">
                         <i class="fa fa-whatsapp" aria-hidden="true"></i>
                     </span>
-                    <a href="">
+                    <a href="https://w.app/loja99">
                         <span>Fale pelo whatsapp</span>
-                    </a>
+                        
+                
+                </a>
                 </section>
                 <!-- FAQ -->
                 <section class="faq">
@@ -85,7 +97,7 @@
                             <i class="fa fa-user-circle" aria-hidden="true"></i>
                         </span>
                         <a href="">                            
-                            <span class="font">adicionar informacoes</span>
+                            <span class="font"></span>
                         </a>
                     </section>
                     <!-- Social Media -->
